2003-04-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/schedule.c (deschedule):
	(squeue_execute):
	(execute_obj_func):
	* fvwm/module_interface.c (DeleteMessageQueueBuff):
	(ExecuteCommandQueue):
	* libs/queue.c (fqueue_init):
	(fqueue_remove_or_operate_from_front):
	(fqueue_remove_or_operate_from_end):
	(fqueue_remove_or_operate_all):
	(fqueue_init):
	(fqueue_unlock_queue):
	(fqueue_lock_queue):
	(fqueue_add_at_front):
	(fqueue_add_inside):
	(fqueue_get_first):
	core dump fixes

	* libs/queue.c (fqueue_remove_or_operate_all):
	(fqueue_remove_or_operate_from_end):
	(fqueue_remove_or_operate_from_front):
	* fvwm/module_interface.c (DeleteMessageQueueBuff):
	(ExecuteCommandQueue):
	* fvwm/schedule.c (deschedule):
	(check_deschedule_obj_func):
	(deschedule_obj_func):
	(squeue_execute):
	(check_execute_obj_func):
	(execute_obj_func):
	(copy_obj_func):
	core dump fixes

2003-04-15  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/ConfigFvwmDefaults:
	* fvwm/fvwm.1.in:
	* fvwm/windowlist.c:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* NEWS:
	WindowListFunc is executed now within a window context,
	so "WindowId $0" is not needed anymore in its definition

2003-04-14  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	* NEWS:
	Documented LocalePath and $[gt.str]. FvwmScript news.

	* fvwm/expand.c (expand_vars_extended):
	Fixed $[gt.str] expansion

	* configure.in:
	New gettext domain FvwmScript

	* libs/FGettext.c (FGettextCopy):
	* libs/FGettext.h:
	New interface function which copies the string

2003-04-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_Cond):
	allow to negate the condition code with '!' prefix

	* fvwm/schedule.c (CMD_Schedule):
	(CMD_Deschedule):
	support hexadecimal ids

	* libs/Parse.c (GetIntegerArguments):
	(_get_suffixed_integer_arguments):
	(GetSuffixedIntegerArguments):
	(GetIntegerArgumentsAnyBase):
	new utitily function to allow hexadecimal integer arguments

2003-04-10  olicha  <olivier.chapuis@free.fr>
